components/konflux-rbac/production/policies/bootstrap-tenant-namespace/bootstrap-tenant-namespace-clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-tenant-resources-admission
spec:
  rules:
  - name: create-appstudio-runner-rolebinding
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              konflux-ci.dev/type: tenant
          operations:
            - CREATE
            - UPDATE
    generate:
      generateExisting: false
      synchronize: false
      apiVersion: rbac.authorization.k8s.io/v1
      kind: RoleBinding
      name: appstudio-pipelines-runner-rolebinding
      namespace: '{{request.object.metadata.name}}'
      data:
        roleRef:
          apiGroup: rbac.authorization.k8s.io
          kind: ClusterRole
          name: appstudio-pipelines-runner
        subjects:
        - apiGroup: ""
          kind: ServiceAccount
          namespace: '{{request.object.metadata.name}}'
          name: appstudio-pipeline
